# formula1-race-simulation

./: .env.example  .gitignore  2026-05-20T05-16_export.csv  CITATION.cff  PLATFORM_UPGRADES.md  README.md  UPGRADE_ROADMAP_V2.md  pyproject.toml  readme  requirements.txt  run_all.py  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: dashboard.py  dashboard_components.py  f1_analytics_platform.py  f1_analytics_platform_complete.py  f1_hud_platform.py  live_race_simulation.py  race_replay_dashboard.py
app/components/: theme.py
app/pages/: 0_F1_AI_Race_Engineer_Home.py  1_Telemetry_Lab.py  2_Race_Forecast_Cockpit.py  2_Strategy_Lab.py  3_Race_Engineer_AI.py  3_Race_Forecast_Workspace.py  4_Live_Timing_Demo.py  4_Simulation_Workspace.py  5_AI_Race_Engineer_Command_Center.py  7_Model_Evaluation.py  8_AI_Race_Engineer_Lab.py  8_Next_Race_Countdown.py  9_Decision_Intelligence.py
app/ui/: __init__.py  cards.py  charts.py  engineer.py  layout.py  navigation.py  theme.py
apps/frontend/: .env.example  (+4 more)
backend/: __init__.py
docs/: DASHBOARD_GUIDE.md  EVALUATION_PROTOCOL.md  F1SIM_PRO_DESIGN_SYSTEM.md  F1_FANTASY_PLATFORM_BLUEPRINT.md  FUEL_MODEL.md  MODELS_AND_SIMULATION.md  MONTE_CARLO_SIMULATION.md  PLATFORM_OVERVIEW.md  RACE_SIMULATION_ENGINE.md  REPRODUCIBILITY.md  ROADMAP.md  SAFETY_CAR_MODEL.md  STRATEGY_OPTIMIZATION.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_PRODUCT_SPEC.md  SYSTEM_ARCHITECTURE.md  TELEMETRY_INTEGRATION.md  TYRE_MODEL.md  WEATHER_MODEL.md  backend_api.md  enterprise_race_strategy_platform.md  model_card.md  product_design_principles.md
f1_elite_upgrade/: ELITE_README_SECTION.md  apply_upgrade.sh
f1sim/: __init__.py
paper/: abstract.md  contributions.md  future_work.md
scripts/: make_demo_gif.py  run_experiment.py
tests/: test_backend_api.py  test_dashboard_components.py  test_dashboard_structure.py  test_demo_pipeline.py  test_enterprise_domain.py  test_f1sim_core.py  test_lap_evolution.py  test_monte_carlo_api.py  test_pipeline_smoke.py  test_platform_smoke.py  test_probability_analysis.py  test_product_intelligence.py  test_simulation_core.py  test_tyre_model.py  test_ui_design_system.py  test_visualization.py  test_weather_evolution.py
website/: README.md
(+148 files in other folders)
