[project]
name = "f1-ai-predictor"
version = "0.1.0"
description = "Formula 1 race prediction with ML and Monte Carlo simulation"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Keep CI focused on correctness-level failures while the existing codebase is cleaned up.
# Broader style/import rules can be enabled after a dedicated lint cleanup pass.
select = ["E9", "F63", "F7", "F82"]
